@@ -92,7 +92,7 @@ public final class UploadFileBean extends BaseUploadFileBean {
 				folder.mkdirs();
 				if (!Constants.OS_WIN) {
 					try {
-						Runtime.getRuntime().exec("chmod 777 -R " + folder.getPath());
+						Runtime.getRuntime().exec(new String[] { "chmod 777 -R " + folder.getPath() });
 					} catch (final IOException e) {
 						e.printStackTrace();
 					}
@@ -110,7 +110,7 @@ public final class UploadFileBean extends BaseUploadFileBean {
 			this.fileInfo.write(file);
 			if (!Constants.OS_WIN) {
 				try {
-					Runtime.getRuntime().exec("chmod 777 -R " + file.getPath());
+					Runtime.getRuntime().exec(new String[] { "chmod 777 -R " + file.getPath() });
 				} catch (final IOException e) {
 					e.printStackTrace();
 				}
